<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/main_background"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp">

            <com.arlib.floatingsearchview.FloatingSearchView
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:focusable="false"
                app:floatingSearch_close_search_on_keyboard_dismiss="true"
                app:floatingSearch_dimBackground="false"
                app:floatingSearch_leftActionMode="showSearch"
                app:floatingSearch_searchHint="@string/search_hint"
                app:floatingSearch_showSearchKey="false"
                app:floatingSearch_suggestionsListAnimDuration="250" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/food_search"
                android:focusable="true" />

        </RelativeLayout>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="vertical"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/food_analysis"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@mipmap/ic_analysis"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/food_analysis"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"/>

            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:src="@drawable/dividing_line"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="vertical"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/food_compare"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@mipmap/ic_compare"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/food_compare"
                    android:layout_marginTop="4dp"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:src="@drawable/dividing_line"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="vertical"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/food_scan"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@mipmap/ic_scan"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/picture_search"
                    android:layout_marginTop="4dp"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/food_classification"
                    android:textSize="24sp"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/staple_food"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@mipmap/staple_food"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/staple_food"
                        android:layout_marginTop="4dp"
                        android:layout_gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:orientation="vertical"
                    android:layout_gravity="center" >

                    <ImageView
                        android:id="@+id/meat"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@mipmap/meat"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/meat"
                        android:layout_marginTop="4dp"
                        android:layout_gravity="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:orientation="vertical"
                    android:layout_gravity="center" >

                    <ImageView
                        android:id="@+id/vegetable"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@mipmap/vegetable"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/vegetable"
                        android:layout_marginTop="4dp"
                        android:layout_gravity="center" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:orientation="vertical"
                    android:layout_gravity="center" >

                    <ImageView
                        android:id="@+id/fruit"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@mipmap/fruit"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/fruit"
                        android:layout_marginTop="4dp"
                        android:layout_gravity="center" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:orientation="vertical"
                    android:layout_gravity="center" >

                    <ImageView
                        android:id="@+id/milk"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@mipmap/milk"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/milk"
                        android:layout_marginTop="4dp"
                        android:layout_gravity="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:orientation="vertical"
                    android:layout_gravity="center" >

                    <ImageView
                        android:id="@+id/other_kinds"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@mipmap/seafood"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/other_kinds"
                        android:layout_marginTop="4dp"
                        android:layout_gravity="center" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>