<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_gray"
    android:fitsSystemWindows="true" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@mipmap/back1"
        app:popupTheme="@style/AppTheme.PopupOverlay">
        <TextView
            android:id="@+id/food_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="22dp"
            android:text="香蕉"
            android:textColor="@android:color/black" />
    </android.support.v7.widget.Toolbar>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="12dp">

            <ImageView
                android:id="@+id/food_img"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:src="@mipmap/staple_food" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="6dp"
                android:layout_marginStart="12dp">

                <TextView
                    android:id="@+id/food_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_name"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="6dp">

                    <TextView
                        android:id="@+id/food_calorie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/food_calories"
                        android:textSize="24sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/food_weight"
                        android:textSize="18sp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:id="@+id/food_evaluation_img"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_dot_green_24dp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/food_evaluation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#84E16E"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="绿灯食物"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/food_advice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="推荐食用"
                android:layout_marginStart="6dp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="12dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/food_nutrient"
                    android:textSize="18sp"
                    android:textColor="@color/light_gray_inactive_icon"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/food_per_weight"
                    android:textSize="18sp"
                    android:textColor="@color/light_gray_inactive_icon"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/food_remark"
                    android:textSize="18sp"
                    android:textColor="@color/light_gray_inactive_icon"/>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray_inactive_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="12dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/calories"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/calorie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/food_per_weight"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/calorie_remark"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/food_remark"
                    android:textSize="18sp" />

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray_inactive_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="12dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/protein"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/protein"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/food_per_weight"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/protein_remark"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/food_remark"
                    android:textSize="18sp" />

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray_inactive_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="12dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/fat"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/fat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/food_per_weight"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/fat_remark"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/food_remark"
                    android:textSize="18sp" />

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray_inactive_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="12dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/carbohydrate"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/carbohydrate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/food_per_weight"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/carbohydrate_remark"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/food_remark"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>